# doran-dark

./: .bower.json  .gitignore  CMakeLists.txt  bower.json  component.json  notes.md  oops.md  readme.md  style.md
example/: CMakeLists.txt  component.json  readme.md
example/include/: BallObject.h  Game.h  GameLevel.h  GameObject.h  ParticleGenerator.h  ResourceManager.h  Shader.h  SpriteRenderer.h  Texture.h
example/include/dark/: Foundation.h  cexcept.h  class.md  polyfill.h  printf.h  unit.h
example/include/dark/collections/: array.h  list.h  map.h
example/include/dark/core/: class.h  comparable.h  exception.h
example/include/dark/io/: bufferedreader.h  file.h  fileinputstream.h  inputstreamreader.h  reader.h
example/include/dark/types/: char.h  double.h  float.h  number.h
example/include/implementation/: BallObject.h  Game.h  GameObject.h  ParticleGenerator.h  ResourceManager.h  Shader.h  SpriteRenderer.h
example/src/: BallObject.c  Boot.c  Game.c  GameLevel.c  GameObject.c  ParticleGenerator.c  ResourceManager.c  Shader.c  SpriteRenderer.c  Texture.c  main.c
example/src/imp/: BallObject.h  Game.h  GameLevel.h  GameObject.h  ParticleGenerator.h  ResourceManager.h  Shader.h  SpriteRenderer.h  Texture2D.h
example/src/private/: BallObject.h  Game.h  GameLevel.h  GameObject.h  ParticleGenerator.h  ResourceManager.h  Shader.h  SpriteRenderer.h  Texture2D.h
include/: darkfx.h  types.h
include/Dark/: Circle.h  Object.h  Rect.h  Shape.h
include/dark/: Class.h  Comparable.h  DObject.h  DSClass.h  DSComparable.h  DSException.h  DSException1.h  DSLog.h  DSObject.h  Foundation.h  Hashmap.h  List.h  Object.h  Vector.h  cexcept.h  class.md  classes copy.h  classes.h  classy.h  core.h  darkfx.h  hashmap.h  loader.h  polyfill.h  printf.h  runtime.h  template.h  template.h.liquid  types.h
include/dark/Functional/: Either.h  Maybe.h  Option.h
include/dark/collections/: Array.h  Collection.h  DSArray.h  DSCollection.h  DSHashmap.h  DSList.h  DSMap.h  Hashmap.h  List.h  Vector.h  array.h  list.h  map.h
include/dark/collections/implementation/: DSArray.h  DSCollection.h  DSHashmap.h  DSList.h
include/dark/collections/private/: DSArray.h  DSCollection.h  DSList.h
include/dark/core/: class.h  comparable.h  exception.h  object.h
include/dark/functional/: either.h  maybe.h  option.h  try.h
include/dark/implementation/: DSClass.h  DSComparable.h  DSException.h  DSObject.h
include/dark/io/: DSBufferedReader.h  DSFile.h  DSFileInputStream.h  DSFileSystem.h  DSInputStream.h  DSInputStreamReader.h  DSReader.h  File.h  FileSystem.h  bufferedreader.h  file.h  fileinputstream.h  filesystem.h  inputstream.h  inputstreamreader.h  reader.h  zDSFileSystem.h
include/dark/io/implementation/: DSBufferedReader.h  DSFileInputStream.h  DSInputStreamReader.h  DSReader.h
include/dark/io/io/: DSFile.c  DSFileInputStream.c  DSFileSystem.c  DSInputStream.c  DSInputStreamReader.c  (+1 more)
include/dark/types/: Boolean.h  Char.h  DSBoolean.h  DSChar.h  DSDouble.h  DSFloat.h  DSInteger.h  DSLong.h  DSNumber.h  DSShort.h  DSString.h  DSStringBuilder.h  Double.h  Float.h  Integer.h  Long.h  Number.h  Short.h  String.h  StringBuilder.h  boolean.h  char.h  double.h  float.h  integer.h  long.h  number.h  short.h  string.h  stringbuilder.h
include/dark/util/: bitset.h  mt19937ar.h  uuid.h
rpi3/: readme.md
src/: Class.c  Comparable.c  DObject.c  DSClass.c  DSComparable.c  DSException.c  DSObject.c  Hashmap.c  List.c  Object.c  Vector.c  core.c  dark.vapi  gc.c  hashmap.c  objc-class.c  printf.1.c  printf.c  runtime.c  string.c
src/Dark/: Circle.c  Object.c  Rect.c  Shape.c
src/Functional/: Either.c  Maybe.1.c  Maybe.c  Option.c
src/collections/: Array.c  Collection.c  DSArray.c  DSCollection.c  DSHashmap.c  DSList.c  Hashmap.c  List.c  Vector.c
src/collections/private/: DSArray.h  DSHashmap.h  DSList.h
src/io/: DSBufferedReader.c  DSFile.c  DSFileInputStream.c  DSFileSystem.c  DSInputStream.c  DSInputStreamReader.c  DSReader.c  File.c  FileSystem.c  zDSFileSystem.c
src/io/private/: DSFile.h  DSFileSystem.h
src/runtime/: hashmap.c  objc-cache.c  objc-class.c  runtime.c
src/types/: Boolean.c  Char.c  DSBoolean.c  DSChar.c  DSDouble.c  DSFloat.c  DSInteger.c  DSLong.c  DSNumber.c  DSShort.c  DSString.c  DSStringBuilder.c  Double.c  Float.c  Integer.c  Long.c  Number.c  Short.c  String.c  StringBuilder.c  str_builder.c
src/types/private/: DSBoolean.h  DSChar.h  DSDouble.h  DSFloat.h  DSInteger.h  DSLong.h  DSNumber.h  DSShort.h  DSString.h  DSStringBuilder.h
test/: CMakeLists copy.txt  CMakeLists.txt  build.bat  component.json  readme.md  style.md  test.c  test.js  unit
test/include/: BallObject.h  Breakout.h  Game.h  GameLevel.h  GameObject.h  ParticleGenerator.h  ResourceManager.h  Shader.h  SpriteRenderer.h  Texture.h  shmupwarz.h
test/include/breakout/: BallObject.h  GameLevel.h  GameObject.h  ParticleGenerator.h  gamelevel.h
test/include/ecs/: aspect.h  component.h  componentmanager.h  componenttype.h  componenttypefactory.h  ecs.h  entity.h  entitymanager.h  entityobserver.h  entitysystem.h  manager.h  world.h
test/include/ecs/core/: aspect.h  componentmanager.h  componenttype.h  componenttypefactory.h  entity.h  entitymanager.h  entitysystem.h  world.h
test/include/ecs/managers/: groupmanager.h  playermanager.h  tagmanager.h  teammanager.h
test/include/ecs/systems/: entityprocessingsystem.h
test/include/shmupwarz/: components.h  entities.h  shmupwarz.h  systems.h  types.h  world.h
test/include/shmupwarz/components/: bounds.h  color.h  components.h  expire.h  health.h  position.h  scale.h  sound.h  sprite.h  taxonomy.h  transform.h  tween.h  velocity.h
test/include/xna/: game.h  memorypool.h  point.h  rectangle.h  resourcemanager.h  shader.h  spriterenderer.h  texture2d.h  xna.h
test/lib/: libBlocksRuntime.bc
test/src/: Boot.c  TestTypes.vala  basic.vala  cons.c  darkunit.c  darkunit.h  demo.c  demo.c.h  main copy.c  main.0.c  main.1.c  main.c  main.c.text  main.h  maybe.c  monads.c  notes.c  printf.c  qvec.h  unit.c  unit.vala
vapis/: dark.vapi
(+18 files in other folders)
